--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </p>
   <td>
 	<video width="429" height="200" controls>
-	<source src="FloweGarden.mp4" type="video/mp4">
+	<source src="FlowerGarden.mp4" type="video/mp4">
 	</video>
   <td>
   </td>
