--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
   <tr>
     <td class="infotd">
       <h3>Liana Chowdhury</h3>
-      <p> My prior experience with coding include Java and Python.</p> 
+      <p> My prior experience with coding include Java at A-Level and Python during high school.
+	  However, it's pretty clear I'm out of practice now.
+	  Hopefully as I go through City, I'll regain my confidence with coding.
+	  My hobbies include cooking, drawing and painting.
+	  </p> 
+    </td>
+	<td>
+	<img src="me.jpg" width=300px></img>
     </td>
   </tr>
   <tr>
