Updated to include Java Project

--- a/index.html
+++ b/index.html
@@ -2,76 +2,92 @@
 <html>
 
 <head>
- <style type="text/css">
-   body{
-      background-color:rgb(50,50,50);
-      color:white
-   }
-   a{
-      color:rgb(210,210,255)
-   }
-   img{
-      margin: 15px 15px 15px 15px
-   }
-   hr{
-      border-top: 1px solid gray;
-   }
-   .infotd{
-     vertical-align:top
-   }
- </style>
+    <style type="text/css">
+        body {
+            background-color: rgb(50, 50, 50);
+            color: white
+        }
+
+        a {
+            color: rgb(210, 210, 255)
+        }
+
+        img {
+            margin: 15px 15px 15px 15px
+        }
+
+        hr {
+            border-top: 1px solid gray;
+        }
+
+        .infotd {
+            vertical-align: top
+        }
+
+    </style>
 </head>
 
 <body style="background-color:rgb(50,50,50); color:white">
-<table width= 1000px>
-  <tr>
-    <td class="infotd">
-      <h3>Liana Chowdhury</h3>
-      <p> My prior experience with coding include Java at A-Level and Python during high school.
-	  However, it's pretty clear I'm out of practice now.
-	  Hopefully as I go through City, I'll regain my confidence with coding.
-	  My hobbies include cooking, drawing and painting.
-	  </p> 
-    </td>
-	<td>
-	<img src="me.jpg" width=300px></img>
-    </td>
-  </tr>
-  <tr>
-    <td colspan=2>
-	<hr>
-    </td>
-  </tr>
+    <table width=1000px>
+        <tr>
+            <td class="infotd">
+                <h3>Liana Chowdhury</h3>
+                <p> My prior experience with coding include Java at A-Level and Python during high school.
+                    My hobbies include cooking, drawing and painting.
+                </p>
+            </td>
+            <td>
+                <img src="me.jpg" width=150px>
+            </td>
+        </tr>
+        <tr>
+            <td colspan=2>
+                <hr>
+            </td>
+        </tr>
 
- <tr>
-  <td class="infotd">
-    <h3>Bootcamp 2020: Flower Garden</h3>
-    <p>
-	My first programming project, concluding the 2 week Programming Bootcamp at 
-	City (2020). This Processing project demonstrates a comprehensive understanding 
-	of the use of arrays, loops, and randomness. I created a flower garden scene where 
-	the amount of flowers, their starting height and final height are randomized. The 
-	player would interact with it by "pushing" the ends of the stem to grow. Finally, 
-	once all of the flowers have grown, an ending message is displayed.
-    </p>
+        <tr>
+            <td class="infotd">
+                <h3>Bootcamp 2020: Flower Garden</h3>
+                <p>
+                    My first programming project at City, concluding the 2 week Programming Bootcamp at
+                    City (2020). This Processing project demonstrates a comprehensive understanding
+                    of the use of arrays, loops, and randomness. I created a flower garden scene where
+                    the amount of flowers, their starting height and final height are randomized. The
+                    player would interact with it by "pushing" the ends of the stem to grow. Finally,
+                    once all of the flowers have grown, an ending message is displayed.
+                </p>
 
-    <p>
-      Check out the code on Github: <a href="https://liana-chow.github.io/">https://liana-chow.github.io/</a>
-    </p>
-  <td>
-	<video width="429" height="200" controls>
-	<source src="FlowerGarden.mp4" type="video/mp4">
-	</video>
-  <td>
-  </td>
-<tr>
- <td colspan = 2 align=center>
-	<img src="pic1.png" width="285px">
-	<img src="pic2.png" width="265px">
-	<img src="pic3.png" width="255px">
- </td>
-</tr>
- </tr>
-</table>
+                <p>
+                    Check out the code on Github: <a href="https://liana-chow.github.io/">https://liana-chow.github.io/</a>
+                </p>
+            <td>
+                <video width="429" height="200" controls>
+                    <source src="FlowerGarden.mp4" type="video/mp4">
+                </video>
+        </tr>
+        <tr>
+            <td colspan=2>
+                <hr>
+            </td>
+        </tr>
+        
+        <tr>
+            <td class="infotd">
+                <h3>March 2021: Platformer Game</h3>
+                <p>
+                    My first Java game, concluding the IN1007 Programming in Java module at City (2021). This Java game functionalities of the game include the pause, play and restart of a level; muting, unmuting, increasing or decreasing the sound of the background music; saving and loading the game from 3 different file locations; randomisation of each level; and the ability to switch between different characters who all have different traits. You can progress through 3 levels.
+                </p>
+
+                <p>
+                    Check out the code on Github: <a href="https://liana-chow.github.io/">https://liana-chow.github.io/</a>
+                </p>
+            <td>
+                <video width="429" height="200" controls>
+                    <source src="JavaProject.mp4" type="video/mp4">
+                </video>
+        </tr>
+    </table>
 </body>
+
 </html>
